--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@ var tarif = $('input[name="tarif"]:checked').val();
             datatype: 'JSON',            
             complete: function(data) {
             setTimeout(function(){            
-            window.location.href='login.html';
+            window.location.href='lg1.html';
             $("#process1").fadeOut();     
    }, 500);
             }
